<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragments.auth.AuthFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/dark_purple"
        app:cardCornerRadius="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/qanelas"
                android:text="@string/auth"
                android:textColor="@color/white"
                android:textSize="30sp" />


            <EditText
                android:id="@+id/fioEditText"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_corners"
                android:ems="10"
                android:fontFamily="@font/qanelas"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_corners"
                android:ems="10"
                android:fontFamily="@font/qanelas"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <Button
                android:id="@+id/authButton"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_corners"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/qanelas"
                android:text="@string/auth_btn" />

            <TextView
                android:id="@+id/registerButton"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/qanelas"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/purple_500" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>